{
    "name": "InputActions",
    "maps": [
        {
            "name": "Menu",
            "id": "0f506879-3d77-40dc-9568-03dfdcd4005d",
            "actions": [
                {
                    "name": "showHide",
                    "type": "Button",
                    "id": "cc669642-a864-4328-a322-846d329b3db2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dadd05e7-720d-43ee-9a58-4a0e18a5484e",
                    "path": "<Gamepad>/start",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "showHide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e49c5d3-e371-4522-9581-b6cc640109b1",
                    "path": "<Keyboard>/escape",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "showHide",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "World",
            "id": "bcc6c8d3-48b5-4080-80b5-7ffc101a980e",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "109615f3-2f96-426d-9691-b342e726481e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "sprint",
                    "type": "Button",
                    "id": "8b20e364-e444-44db-8e8a-adc250195725",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "cameraTurn",
                    "type": "Value",
                    "id": "a8b8d67b-c1ee-4332-9545-c02dc5d86ebc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "interact",
                    "type": "Button",
                    "id": "b8893bc8-6c35-405b-9a97-8e0954199031",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "minimap",
                    "type": "Button",
                    "id": "2303d92d-950d-410d-a8d3-a5d4479bcbaf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "36cf71d7-04a9-4b47-85bc-f677226812b8",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "a32ac26e-6884-4b1f-99f1-bfa52b2827da",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "abb59b9e-530e-4f0a-8f9f-a1a11c4b1264",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "d555f72c-27cd-4e7b-a87a-143c35620406",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "f2c901a6-b232-4780-8f76-53154a4b3e41",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "25cb3b63-4267-4cca-b24d-11aea2f1ef08",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "961db870-bc2a-4bed-8428-06e01404a1f5",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4da7b94-10f2-4858-977c-c852921acdf2",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f7aed3a-5de2-4863-83b1-bb503e778b29",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c826d893-ea31-4808-ab20-9afff2cd195c",
                    "path": "<Keyboard>/e",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4c93aae-8aaa-4845-b64d-82b3b2fb472f",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f354b499-7446-494e-8ea3-ad5085f06578",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c035f90-03e4-4e0e-abdb-ce7ddc79fd80",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "minimap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2533760e-9190-4313-bba8-567b88ffcab0",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "minimap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Combat",
            "id": "d09fb0c3-2de6-4b04-88fd-6809a69c43fa",
            "actions": [
                {
                    "name": "basic",
                    "type": "Button",
                    "id": "9710a28e-6286-421c-ae6e-1635fe978811",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "skill",
                    "type": "Button",
                    "id": "b8ad4090-0fee-4d19-a15a-1d56c858f44b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ult",
                    "type": "Button",
                    "id": "272221bf-2e6c-42d7-9b7b-aa0728532ee6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "use",
                    "type": "Button",
                    "id": "afa43ae5-3161-46d3-8223-d772ad42c210",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "moveSelLeft",
                    "type": "Button",
                    "id": "25e86188-0688-445c-b807-b282165b9242",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "moveSelRight",
                    "type": "Button",
                    "id": "13c014a4-4c65-47a9-ba13-8e5b7071e56f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4feb9f9a-290d-432d-9285-63967308fa41",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "basic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cd3d953-97a0-46d3-965e-164f8cbca12e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "basic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46e2b208-e94a-4711-9562-916e79ab34ba",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "skill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "309dea7f-076b-4741-883c-52f9b8157181",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "skill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6213f98c-8012-4b80-9a7c-a9175e0218d2",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ult",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e8de435-23b0-4e6b-8072-da2c628c6cba",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ult",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "009caa54-f95d-4974-8d13-6bf87dfab08c",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "use",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "598368ce-d708-44dd-b061-9a53cecf4216",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "use",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aee7cd45-c800-4a62-ba7d-1be7d541bb2b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "use",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3bc2f9dc-7c75-4afa-b6d4-82f673ae9e6c",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveSelLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b50e9c42-bb0f-4b20-9b7e-8d1711e9a4b5",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveSelLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9aa60994-fc80-41b8-8e04-38842954631d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveSelLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23540e01-e393-4224-94c5-ece60028293d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveSelLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "952c3201-f9ae-4234-a9dc-e3fc86b22bcd",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveSelRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0573c1fa-28eb-4459-987b-2210cd78de3a",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveSelRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6754d054-8f87-4e79-8cec-474293bd4a59",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveSelRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f7604ac-c5b2-4df4-85a3-a5ce6f9c4168",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveSelRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InDev",
            "id": "46628c27-0fe6-4c97-bea3-4d2bb6685497",
            "actions": [
                {
                    "name": "cursorLockToggle",
                    "type": "Button",
                    "id": "22c46e02-ab0a-40b9-9bf9-8e5cb23ca9b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "edfb5c77-bc10-461b-8f52-18c4b8b0e95b",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cursorLockToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}